# 5400-Final-project

./: .gitignore  Project Proposal.docx  README.md  environment.yml
data/: README.md  dpo_train.jsonl  dpo_train_v2.jsonl  dpo_train_v3.jsonl  dpo_valid.jsonl  dpo_valid_v3.jsonl  results_advanced.jsonl  results_advanced_demo_5.jsonl  results_baseline.jsonl  results_combined_for_evaluation.csv  results_combined_for_evaluation.jsonl  results_debate.jsonl  results_dpo.jsonl  results_dpo_advanced.jsonl  results_finetuned.jsonl  slang_OpenSub.tsv  slang_OpenSub_negatives.tsv
data/mlx/: valid.jsonl
slang_normalizer/: README.md  pyproject.toml
slang_normalizer/checkpoints_dpo_v2/: adapter_config.json
slang_normalizer/checkpoints_dpo_v3/: adapter_config.json
slang_normalizer/data/: README.md  dpo_valid_conservative.jsonl
slang_normalizer/docs/: architecture.drawio
slang_normalizer/src/slang_normalizer/: __init__.py  advanced_with_backtranslation.py  baseline_eval.py  combine_results.py  demo_advanced_backtranslation.py  download_benchmark_metadata.py  evaluation.py  finetuned_inference.py  logging_utils.py  multi_agent_debate.py  prepare_dpo_data.py  prepare_mlx_data.py  preprocess.py  train_dpo_mlx.py  train_mlx.py
slang_normalizer/tests/: test_cleaning.py  test_pipeline_helpers.py
