[project]
name = "slang-normalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wz335", email = "wz335@georgetown.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
